tests/derive/enum.stderr
error: derive(Bundle) does not support enums or unions
 --> $DIR/enum.rs:4:6
  |
4 | enum Foo {}
  |      ^^^
